--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -5043,7 +5043,7 @@
       </notes>
       <segment>
         <source>Einen Blick ins Forum werfen.</source>
-        <target>Coordina con tus vecinos en el Foro.</target>
+        <target>Coordina con tus vecinos en el Foro</target>
       </segment>
     </unit>
     <unit id=".vMt2eO" name="Meine Ration Wasser im Brunnen entnehmen (optional).">
@@ -5053,7 +5053,7 @@
       </notes>
       <segment>
         <source>Meine Ration Wasser im Brunnen entnehmen (optional).</source>
-        <target>Toma tu ración de agua en el pozo (opcional).</target>
+        <target>Toma tu ración de agua en el pozo (opcional)</target>
       </segment>
     </unit>
     <unit id="UgqaO9M" name="An der Angriffsabschätzung teilnehmen">
@@ -5063,7 +5063,7 @@
       </notes>
       <segment>
         <source>An der Angriffsabschätzung teilnehmen</source>
-        <target>Participa en el pronóstico del ataque.</target>
+        <target>Participa en el pronóstico del ataque</target>
       </segment>
     </unit>
     <unit id="h3w5_BE" name="Für ein Tagesprojekt abstimmen.">
@@ -5073,7 +5073,7 @@
       </notes>
       <segment>
         <source>Für ein Tagesprojekt abstimmen.</source>
-        <target>Vota por el proyecto del día.</target>
+        <target>Vota por el proyecto del día</target>
       </segment>
     </unit>
     <unit id="G7Kbsmc">
