--- a/translations/council+intl-icu.es.xlf
+++ b/translations/council+intl-icu.es.xlf
@@ -226,6 +226,7 @@
       <notes>
         <note category="german">+1 !</note>
         <note category="from">db://CouncilEntryTemplate</note>
+        <note category="state">new</note>
       </notes>
       <segment>
         <source>+1 !</source>
@@ -797,6 +798,7 @@
       <notes>
         <note category="german">...</note>
         <note category="from">db://CouncilEntryTemplate</note>
+        <note category="state">new</note>
       </notes>
       <segment>
         <source>...</source>
@@ -828,6 +830,7 @@
       <notes>
         <note category="german">Pfffffff</note>
         <note category="from">db://CouncilEntryTemplate</note>
+        <note category="state">new</note>
       </notes>
       <segment>
         <source>Pfffffff</source>
